--- a/project/index.html
+++ b/project/index.html
@@ -24,18 +24,21 @@
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  
   <!-- Add New Bower Component JS Above -->
 
   <!-- Main App JS -->
   <script src="app.js"></script>
   <script src="src/app/home/home.controller.js"></script>
   <script src="src/app/exo03/exo03.controller.js"></script>
-   <script src="src/app/exo03/detail-partial/detail.controller.js"></script>
-
+  <script src="src/app/exo04/exo04.controller.js"></script>
+  <script src="src/app/exo03/detail-partial/detail.controller.js"></script>
+  <script src="src/components/setting/setting.service.js"></script>
+  <script src="src/components/meteo/meteo.service.js"></script>
   <!-- Add New Component JS Above -->
 
   <toast></toast>
-  <div ng-view></div>
+  <div class="flex-conteneur" ng-view></div>
 
 </body>
 </html>
